--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,6 +8,11 @@ pre {
 
 .alert {
     padding-right: 14px;
+    margin-bottom: 0;
+}
+
+.alert + .alert {
+    margin-top: 20px;
 }
 
 .toggle-stack {
