--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,99 +1,128 @@
-body {
+body
+{
     font-family: "Inconsolata","Monaco",Verdana,Arial,sans-serif;
 }
 
-pre {
+pre
+{
     margin: 0;
 }
 
-.alert {
+.alert
+{
     padding-right: 14px;
     margin-bottom: 0;
 }
 
-.alert + .alert {
+.alert + .alert
+{
     margin-top: 20px;
 }
 
-.alert .close {
+.alert .close
+{
     top: 0;
     right: 0;
 }
 
-.alert-emergency {
+.alert-emergency
+{
     background-color: #dca7a7;
     border-color: #d89ca6;
     color: #833332;
 }
-.alert-emergency h4 {
+
+.alert-emergency h4
+{
     color: #833332;
 }
-.alert-alert {
+
+.alert-alert
+{
     background-color: #e4b9b9;
     border-color: #dfaeb7;
     color: #953b39;
 }
-.alert-alert h4 {
+
+.alert-alert h4
+{
     color: #953b39;
 }
-.alert-critical {
+
+.alert-critical
+{
     background-color: #ebcccc;
     border-color: #e6c1c7;
     color: #a74240;
 }
-.alert-critical h4 {
+
+.alert-critical h4
+{
     color: #a74240;
 }
-.alert-error {
+
+.alert-error
+{
     background-color: #f2dede;
     border-color: #eed3d7;
     color: #b94a48;
 }
-.alert-error h4 {
+
+.alert-error h4
+{
     color: #b94a48;
 }
 
-.alert-warning {
+.alert-warning
+{
     background-color: #faf2cc;
     border-color: #f8e5be;
     color: #b78c43;
 }
 
-.alert-warning h4 {
+.alert-warning h4
+{
     color: #b78c43;
 }
 
-.alert-notice {
+.alert-notice
+{
     background-color: #fcf8e3;
     border-color: #fbeed5;
     color: #c09853;
 }
 
-.alert-notice h4 {
+.alert-notice h4
+{
     color: #c09853;
 }
 
-.alert-info {
+.alert-info
+{
     background-color: #d9edf7;
     border-color: #bce8f1;
     color: #3a87ad;
 }
 
-.alert-info h4 {
+.alert-info h4
+{
     color: #3a87ad;
 }
 
-.alert-debug {
+.alert-debug
+{
     background-color: #eef7fb;
     border-color: #d1eff5;
     color: #4196bf;
 }
 
-.alert-debug h4 {
+.alert-debug h4
+{
     color: #4196bf;
 }
 
-.toggle-stack {
+.toggle-stack
+{
     font-size: 18px;
     color: #000000;
     cursor: pointer;
@@ -102,6 +131,7 @@ pre {
 .pagination ul>.disabled>span,
 .pagination ul>.disabled>a,
 .pagination ul>.disabled>a:hover,
-.pagination ul>.disabled>a:focus {
+.pagination ul>.disabled>a:focus
+{
     background-color: #f5f5f5;
 }
